# docmd

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/docmd/: __init__.py  core.py
tests/: test_acceptation.py
