[project]
name = "docmd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Athroniaeth", email = "pierre.chaumont@hotmail.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "markitdown[docx]>=0.1.3",
    "mdformat>=0.7.22",
    "pymupdf4llm>=0.0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
